@@ -14,6 +14,10 @@ PHP                                                                        NEWS
   . Fixed bug #69882 (OpenSSL error “key values mismatch” after 
     openssl_pkcs12_read with extra cert) (Tomasz Sawicki)
 
+- SPL:
+  . Fixed bug #69970 (Use-after-free vulnerability in
+    spl_recursive_it_move_forward_ex()). (Laruence)
+
 09 Jul 2015, PHP 5.6.11
 
 - Core:
